--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,8 +11,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="create_new_account">Create new account</string>
     <string name="forgot_password">Forgot password</string>
-    <string name="first_name">First name</string>
-    <string name="last_name">Last name</string>
+    <string name="full_name">Full name</string>
     <string name="email_register">Email         </string>
     <string name="forgot_disclaimer">Enter the email associated with your account and we will send an email with instructions to reset your password.</string>
     <string name="send_code">Send code</string>
@@ -68,5 +67,7 @@
     <string name="change">Change</string>
     <string name="new_name">New Name</string>
     <string name="change_name">Change name</string>
+    <string name="log_out">Log out</string>
+    <string name="click_here_to_change_password">Click here to change password!</string>
 
 </resources>
