--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -86,5 +86,6 @@
     <string name="delete_question">Are you sure you want to delete this item ?</string>
     <string name="delete">Delete</string>
     <string name="delete_item">Delete item</string>
+    <string name="home">Home</string>
 
 </resources>
